--- a/proprietary/hybrid/hybrid_xhdpi.conf
+++ b/proprietary/hybrid/hybrid_xhdpi.conf
@@ -8,27 +8,29 @@
 ## CONFIGURATION
 %hybrid_mode=1
 %system_default_layout=0
-%user_default_layout=0
-%system_default_dpi=0
-%user_default_dpi=0
+%user_default_layout=600
+%system_default_dpi=200
+%user_default_dpi=200
 
 ## WORKSPACE PREFERENCES
-android.dpi=320
-android.layout=0
-com.android.systemui.dpi=320
+android.dpi=180
+android.layout=600
+com.android.systemui.dpi=180
 com.android.systemui.statusbar.dpi=100
 com.android.systemui.navbar.dpi=100
-com.android.systemui.layout=360
+com.android.systemui.layout=600
 
 ## SYSTEM PREFERENCES
-com.android.vending.dpi=320
+com.android.vending.dpi=230
 com.android.vending.layout=360
-com.android.phone.dpi=320
-com.android.phone.layout=360
-com.android.email.dpi=320
+com.android.phone.dpi=230
+com.android.phone.layout=600
+com.android.email.dpi=230
 com.android.email.layout=360
-com.google.android.gm.dpi=320
+com.google.android.gm.dpi=230
 com.google.android.gm.layout=360
-com.google.android.talk.dpi=320
+com.google.android.talk.dpi=230
 com.google.android.talk.layout=360
 com.cyanogenmod.lockclock.force=1
+org.fox.ttrss.dpi=230
+com.tapatalk.tapatalk4.dpi=230
